# ross-google-fulfillment

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.gradle  deploy-local.sh  local.properties  settings.gradle  stack.yml  undeploy-local.sh
.github/workflows/: publish.yaml  test.yaml
migrations/: 20211219105801_create_table_device.up.sql
src/: config.rs  controller.rs  errors.rs  main.rs  routes.rs
src/entities/: account.rs  device.rs
src/main/java/com/rosssmarthome/rossgooglefulfillment/: RossGoogleFulfillmentApplication.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/config/: GcpConfig.java  SecurityConfig.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/controller/: FulfillmentController.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/data/: CommandPayloadKey.java  CommandType.java  DeviceCommand.java  DeviceState.java  DeviceType.java  GatewayCommand.java  GatewayState.java  PeripheralState.java  StateKey.java  StateUpdateRequest.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/entity/: Account.java  Device.java  Gateway.java  State.java  Trait.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/properties/: GcpProperties.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/repository/: AccountRepository.java  DeviceRepository.java  GatewayRepository.java
src/main/java/com/rosssmarthome/rossgooglefulfillment/service/: AccountService.java  DeviceService.java  FulfillmentService.java  GatewayService.java
src/main/resources/: application.yml
src/main/resources/migration/: V0.1.0_2__create_table_account.sql  V0.1.0_3__create_table_gateway.sql  V0.1.0_4__create_table_device.sql  V0.1.0_5__alter_table_device.sql  V0.1.0_5__create_table_trait.sql  V0.1.0_6__alter_table_device.sql  V0.1.0_6__create_table_state.sql
src/models/: fulfillment_request.rs  fulfillment_response.rs  mod.rs  valid_token.rs
src/services/: account_service.rs  device_service.rs  mod.rs
(+1 files in other folders)
