[package]
name = "ross-google-fulfillment"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Google Actions Fulfillment API for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-google-fulfillment"
readme = "README.md"

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"

[dependencies.serde]
version = "1.0.131"
features = ["derive"]
