[package]
name = "ross-google-fulfillment"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Google Actions Fulfillment API for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-google-fulfillment"
readme = "README.md"

[dependencies]
jwks-client = {git = "https://github.com/jfbilodeau/jwks-client"}

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.131"
features = ["derive"]
