[package]
name = "ross-google-fulfillment"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Google Actions Fulfillment API for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-google-fulfillment"
readme = "README.md"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4.19"
jwks-client = {git = "https://github.com/jfbilodeau/jwks-client"}

[dependencies.rocket]
version = "0.5.0-rc.1"
git = "https://github.com/SergioBenitez/Rocket"
features = ["json", "uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc"
git = "https://github.com/SergioBenitez/Rocket"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.5.9"
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid"]

[dependencies.serde]
version = "1.0.131"
features = ["derive"]
